--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  audio_session: ^0.2.2
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   flutter:
@@ -22,6 +23,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.20.2
   json_annotation: ^4.9.0
+  just_audio: ^0.10.5
   modal_bottom_sheet: ^3.0.0
   riverpod_annotation: ^3.0.0
   shimmer: ^3.0.0
